flink-pipeline/skaffold/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nyomio-nyom-stream-processor-flink-pipeline-deployment
spec:
  selector:
    matchLabels:
      app: flink-pipeline-dev
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: flink-pipeline-dev
      annotations:
    spec:
      containers:
        - name: "flink-pipeline"
          image: "nyomio-nyom-stream-processor-flink-pipeline-skaffold"
          imagePullPolicy: Never
          ports:
            - name: ui
              containerPort: 8081
            - name: debug
              containerPort: 5005
          volumeMounts:
            - name: certsecret
              mountPath: /opt/flink/cert
              readOnly: true
      volumes:
        - name: certsecret
          secret:
            secretName: certsecret
