flink-pipeline/skaffold/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flink-pipeline-dev
spec:
  ports:
    - name: debug
      port: 5005
    - name: ui
      port: 8081
  selector:
    app: flink-pipeline-dev
