flink-pipeline/skaffold/k8s/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: flink-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flink-default.nyomio.local`)
      kind: Rule
      priority: 1
      services:
        - name: flink-pipeline-dev
          port: 8081
  tls:
    secretName: certsecret
